--- a/app/views/profile/create.html.erb
+++ b/app/views/profile/create.html.erb
@@ -1,4 +1,5 @@
 <%= form_tag "/profile/create_pet", multipart: true %>
+<input type="hidden" name="prev_uri" value="<%= @prev_uri %>">
 <div class="container">
   <h2>멍냥이 프로필을 작성해 주세요.</h2> 
   
