--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -3,9 +3,10 @@
 </div>
 
 <a href="#bottom"><div class="arrow-down" style="margin-top: 3em;"></div></a>
+<div id="bottom"></div>
 
 <div class="container center" style="margin-top: 8em; margin-bottom: 8em;">
-  <div id="bottom" class="row index_menu">
+  <div class="row index_menu">
     <a class="col s12 l3" href="/profile/index">
       <i class="material-icons blue-text">favorite</i>
       <h4 class="blue-text">멍냥 프로필</h4>
