--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -30,13 +30,12 @@
     <div class="file-field input-field">
       <div class="btn">
         <span>Photo</span>
-        <input type="file" multiple>
+        <%= f.file_field :img %>
       </div>
       <div class="file-path-wrapper">
         <input class="file-path validate" type="text" placeholder="Upload one or more files">
       </div>
     </div>
-  
 <br>
 
 <div class="center-align">
